--- a/src/main/resources/templates/dr_jayant/components/form-dialog.html
+++ b/src/main/resources/templates/dr_jayant/components/form-dialog.html
@@ -38,7 +38,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>Message</label>
-                                <input type="text" name="message" class="form-control" required/>
+                                <textarea rows="4" cols="50" name="message" class="form-control" required></textarea>
                             </div>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="modal-footer">
                     <input type="hidden" name="id"/>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-success">Save</button>
+                    <button type="submit" class="btn btn-success">Send</button>
                 </div>
             </form> 
         </div>
