--- a/src/main/resources/templates/home/components/form-dialog.html
+++ b/src/main/resources/templates/home/components/form-dialog.html
@@ -38,7 +38,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>Message</label>
-                                <input type="text" name="message" class="form-control" required/>
+                                <textarea name="message" class="form-control" required/>
                             </div>
                         </div>
                     </div>
