--- a/src/main/resources/templates/dr_jayant/jayantainfo.html
+++ b/src/main/resources/templates/dr_jayant/jayantainfo.html
@@ -1,4 +1,4 @@
-<div><h2> Health Care Advocate – Care Coordinator</h2></div>
+<div><h2> Online Health Clinic – Care Coordinator</h2></div>
 <div><h4>We understand the Complexities of Managing your Wellness, hence we have a Personal
         Healthcare Advocate who is always available to help you navigate through the 
         complexities. Your HealthCare Advocate is always available to handle the details from 
