--- a/src/main/resources/templates/dr_jayant/jayantainfo.html
+++ b/src/main/resources/templates/dr_jayant/jayantainfo.html
@@ -1,9 +1,9 @@
 <div><h2> Online Health Clinic – Care Coordinator</h2></div>
-<div><h4>We understand the Complexities of Managing your Wellness, hence we have a Personal
+<h3 style="font-family: serif">We understand the Complexities of Managing your Wellness, hence we have a Personal
         Healthcare Advocate who is always available to help you navigate through the 
         complexities. Your HealthCare Advocate is always available to handle the details from 
         Booking Appointments to coordinating procedures, so that you don’t have to. A Personal 
         Healthcare Advocate will manage all aspects of your health experience from scheduling, 
         finding specialist and coordinating with other providers – your advocate takes care of 
         all the details for CARE OPTIMISATION.
-    </h4></div>
+    </h3>
