--- a/src/main/resources/templates/dr_jayant/index.html
+++ b/src/main/resources/templates/dr_jayant/index.html
@@ -1,10 +1,21 @@
 <div th:replace="shared/home/header"></div>
 <!--<div class="col-md-12">
     <div class="box">-->
+<div class="pull-left image">
+          <!--<img src="/webjars/adminlte/2.3.11/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">-->
+          <img src="/image/dr.jayenta.jpg" class="img-circle" alt="User Image">
+        </div>
+
+<p>General and C.I Surgery</p>
+<p>NMC no 6814</p>
+<p>MBBS,MS,MCH FNAS</p>
+<p>Followings in</p>
+<p>Advanced Liver transplant</p>
         <div class="box-header with-border">
-            <a href="javascript:void(0)" class="btn btn-primary btn-xs add-btn" th:title="'Create'+${pageTitle}">
+            <a href="javascript:void(0)" class="btn btn-primary btn-xs add-btn" th:title="'Connect With '+${pageTitle}">
                 <span class="glyphicon glyphicon-plus"><p>Connect With Doctor</p></span>
             </a>
+            
         </div>
         <!-- /.box-header -->
 
