--- a/src/main/resources/templates/dr_jayant/index.html
+++ b/src/main/resources/templates/dr_jayant/index.html
@@ -45,7 +45,7 @@
         $('.add-btn').on('click', function () {
             var $dialog = $('#form-dialog');
             $dialog.find('#modal-title')
-                    .html("Create " + pageTitle);
+                    .html("Connect With " + pageTitle);
             $dialog.modal();
             $('input').val('');
             $('input[type=checkbox]').attr('checked',false)
