--- a/src/main/resources/templates/dr_jayant/jayantainfo.html
+++ b/src/main/resources/templates/dr_jayant/jayantainfo.html
@@ -7,3 +7,14 @@
         finding specialist and coordinating with other providers – your advocate takes care of 
         all the details for CARE OPTIMISATION.
     </h3>
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5e96b5de69e9320caac3b598/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
