--- a/src/main/resources/templates/Dr_Navin_K_Mishra/index.html
+++ b/src/main/resources/templates/Dr_Navin_K_Mishra/index.html
@@ -3,7 +3,7 @@
     <div class="box">-->
 <div class="pull-left image">
           <!--<img src="/webjars/adminlte/2.3.11/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">-->
-          <img src="/image/doctors/Dr_Navin K_Mishra.jpg" class="img-circle" alt="User Image" style="height: 200px">
+          <img src="/image/Doctors/Dr_Navin K_Mishra.jpg" class="img-circle" alt="User Image" style="height: 200px">
         </div>
 
 <p>Department of Pulmonology and Critical care</p>
